# vigilant-cogwheel

./: .gitignore  README.md  demo_enterprise_expert.jsonl  pyproject.toml
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/__tests__/: App.test.tsx
desktop/src/lib/: ipc.ts
src/cli/: main.py
src/ministral_finetuner/: annealing.py  config.py  dataset.py  model.py  trainer.py
tests/: test_annealing.py  test_quality.py
